--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -355,7 +355,7 @@ template {
       .component-landing-page .nav .nav-links a:active {
         border-bottom: 4px solid #009DDB; }
   .component-landing-page .header {
-    background-image: linear-gradient(rgba(0, 100, 148, 0.35), rgba(0, 100, 148, 0.35)), url("../assets/images/bg-main2.jpg");
+    background-image: linear-gradient(rgba(0, 100, 148, 0.5), rgba(0, 100, 148, 0.5)), url("../assets/images/bg-main2.jpg");
     background-size: cover;
     background-position: center;
     height: 100vh;
@@ -365,7 +365,9 @@ template {
       width: 90%;
       margin: 0 auto; }
       .component-landing-page .header .header-container .header-content {
-        width: 50%; }
+        width: 50%;
+        border: 1px solid orange;
+        text-align: center; }
       .component-landing-page .header .header-container .header-form {
         background-color: rgba(0, 0, 0, 0.75);
         width: 50%;
@@ -432,7 +434,7 @@ template {
               font-size: 1.5rem;
               color: #fff; }
   .component-landing-page .services {
-    background-color: #36393F; }
+    background-color: #36393f; }
     .component-landing-page .services .services-container {
       margin: 0 auto;
       display: flex;
@@ -470,30 +472,33 @@ template {
       margin: 0 auto;
       display: flex;
       margin-top: 2rem; }
-      .component-landing-page .contact .contact-card .contact-email {
+      .component-landing-page .contact .contact-card .contact-message {
         width: 60%;
-        background-color: #3B5B85;
+        background-color: #3b5b85;
         padding: 2rem 1rem; }
-        .component-landing-page .contact .contact-card .contact-email .form {
+        .component-landing-page .contact .contact-card .contact-message h4 {
+          text-align: center; }
+        .component-landing-page .contact .contact-card .contact-message .form {
           display: flex;
           justify-content: space-between;
           flex-wrap: wrap; }
-          .component-landing-page .contact .contact-card .contact-email .form .form-group {
+          .component-landing-page .contact .contact-card .contact-message .form .form-group {
             width: 47%;
             margin-bottom: 1rem; }
-            .component-landing-page .contact .contact-card .contact-email .form .form-group input {
+            .component-landing-page .contact .contact-card .contact-message .form .form-group input {
               width: 100%;
               padding: 8px 3px;
               border-radius: 5px; }
-          .component-landing-page .contact .contact-card .contact-email .form .form-group:last-child {
+          .component-landing-page .contact .contact-card .contact-message .form .form-group:last-child {
             width: 100%; }
-            .component-landing-page .contact .contact-card .contact-email .form .form-group:last-child textarea {
+            .component-landing-page .contact .contact-card .contact-message .form .form-group:last-child textarea {
               width: 100%;
-              height: 12rem; }
-        .component-landing-page .contact .contact-card .contact-email .submit-form {
+              height: 12rem;
+              padding: 0.5rem; }
+        .component-landing-page .contact .contact-card .contact-message .submit-form {
           width: 50%;
           margin: 0 auto; }
-          .component-landing-page .contact .contact-card .contact-email .submit-form button {
+          .component-landing-page .contact .contact-card .contact-message .submit-form button {
             width: 100%;
             padding: 0.5rem;
             border-radius: 2px;
@@ -527,7 +532,19 @@ template {
 
 .component-home {
   background-color: #344055;
-  height: 100vh; }
+  height: 100vh;
+  position: relative; }
+  .component-home .views .logging-out {
+    border: 1px solid red;
+    position: absolute;
+    height: 100%;
+    top: 0;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center; }
+    .component-home .views .logging-out h1 {
+      border: 1px solid green; }
   .component-home .nav {
     display: flex;
     height: 10.5vh;
@@ -642,7 +659,7 @@ template {
                 padding-bottom: 1rem;
                 overflow-y: scroll; }
                 .component-home .property-view .property-list-container .property-list .property .modal-container .modal-content .modal-property-form .form-header {
-                  background-color: #2E6B8D;
+                  background-color: #2e6b8d;
                   padding: 3% 0;
                   text-align: center; }
                   .component-home .property-view .property-list-container .property-list .property .modal-container .modal-content .modal-property-form .form-header h3 {
@@ -1463,14 +1480,19 @@ template {
 
 .component-edit-property {
   height: 100%;
+  border: 1px solid green;
   overflow-y: auto; }
-  .component-edit-property .property-img {
-    height: 30%;
-    display: flex;
-    justify-content: center; }
-    .component-edit-property .property-img img {
-      height: 100%;
-      width: 100%; }
+  .component-edit-property .nonUpdating-component {
+    height: 100%;
+    border: 2px solid red; }
+    .component-edit-property .nonUpdating-component .property-img {
+      height: 45%;
+      border: 1px solid orange;
+      display: flex;
+      justify-content: center; }
+      .component-edit-property .nonUpdating-component .property-img img {
+        height: 100%;
+        width: 100%; }
   .component-edit-property .header {
     background-color: #0786FC;
     padding: 0.5rem;
